Fix outline on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,8 @@ body {
     width: 80%;
     margin: 0 auto;
     color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    -webkit-text-stroke: 0.5px black;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5), /* shadow */
+             -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* Outline */
 }
 
 .container p, .container h1, .container h2, .container h3, .container h4, .container h5, .container h6 {
